--- a/webtools/bugzilla/template/en/default/admin/groups/list.html.tmpl
+++ b/webtools/bugzilla/template/en/default/admin/groups/list.html.tmpl
@@ -34,7 +34,7 @@
 
 [% PROCESS global/header.html.tmpl
   title = "Edit Groups"
-  h2 = "This lets you edit the groups available to put users in."
+  subheader = "This lets you edit the groups available to put users in."
 %]
 
 [% edit_contentlink = "editgroups.cgi?action=changeform&amp;group=%%id%%" %]
