--- a/webtools/bugzilla/template/en/default/bug/create/make-template.html.tmpl
+++ b/webtools/bugzilla/template/en/default/bug/create/make-template.html.tmpl
@@ -29,7 +29,7 @@
 
 [% PROCESS global/header.html.tmpl
   title = "Bookmarks are your friend"
-  h1 = "Template constructed"
+  header = "Template constructed"
 %]
 
 <p>
