--- a/webtools/bugzilla/template/en/default/bug/dependency-tree.html.tmpl
+++ b/webtools/bugzilla/template/en/default/bug/dependency-tree.html.tmpl
@@ -26,12 +26,12 @@
 
 [% filtered_desc = blocked_tree.$bugid.short_desc FILTER html %]
 [% PROCESS global/header.html.tmpl
-   title = "Dependency tree for $terms.Bug $bugid"
-   h1    = "Dependency tree for 
-            <a href=\"show_bug.cgi?id=$bugid\">$terms.Bug $bugid</a>"
+   title           = "Dependency tree for $terms.Bug $bugid"
+   header          = "Dependency tree for 
+                      <a href=\"show_bug.cgi?id=$bugid\">$terms.Bug $bugid</a>"
    javascript_urls = ["js/expanding-tree.js"]
-   style_urls = ["skins/standard/dependency-tree.css"]
-   h2    = filtered_desc
+   style_urls      = ["skins/standard/dependency-tree.css"]
+   subheader      = filtered_desc
 %]
 
 [% PROCESS depthControlToolbar %]
