--- a/webtools/bugzilla/template/en/default/bug/edit.html.tmpl
+++ b/webtools/bugzilla/template/en/default/bug/edit.html.tmpl
@@ -665,10 +665,12 @@
 
 <hr>
 
+<div id="comments">
 [% PROCESS bug/comments.html.tmpl
    comments = bug.longdescs
    mode = "edit"
  %]
+</div>
 
 </form>
 
