--- a/webtools/bugzilla/template/en/default/bug/votes/list-for-bug.html.tmpl
+++ b/webtools/bugzilla/template/en/default/bug/votes/list-for-bug.html.tmpl
@@ -30,7 +30,7 @@
 
 [% PROCESS global/header.html.tmpl
            title = "Show Votes"
-           h2 = "$terms.Bug <a href=\"show_bug.cgi?id=$bug_id\">$bug_id</a>"
+           subheader = "$terms.Bug <a href=\"show_bug.cgi?id=$bug_id\">$bug_id</a>"
  %]
 
 [% total = 0 %]
