--- a/webtools/bugzilla/template/en/default/list/quips.html.tmpl
+++ b/webtools/bugzilla/template/en/default/list/quips.html.tmpl
@@ -31,7 +31,7 @@
 
 [% PROCESS global/header.html.tmpl
            title = "$terms.Bugzilla Quip System"
-           h1 = "Add your own clever headline"
+           header = "Add your own clever headline"
  %]
 
 [% IF added_quip %]
