--- a/webtools/bugzilla/template/en/default/bug/comments.html.tmpl
+++ b/webtools/bugzilla/template/en/default/bug/comments.html.tmpl
@@ -26,11 +26,15 @@
   <script type="text/javascript">
   <!--
   function updateCommentPrivacy(checkbox, id) {
-    var text_elem = document.getElementById('comment_text_'+id);
+    var comment_elem = document.getElementById('comment_text_'+id).parentNode;
     if (checkbox.checked) {
-        text_elem.parentNode.className='bz_private';
-    } else {
-        text_elem.parentNode.className='';
+      if (!comment_elem.className.match('bz_private')) {
+        comment_elem.className = comment_elem.className.concat(' bz_private');
+      }
+    }
+    else {
+      comment_elem.className =
+        comment_elem.className.replace(/(\s*|^)bz_private(\s*|$)/, '$2');
     }
   }
   //-->
@@ -85,12 +89,12 @@
 
 [% BLOCK a_comment %]
   [% IF NOT comment.isprivate || isinsider %]
-    <div [% "class=\"bz_private\" " IF comment.isprivate %]
-         [% "class=\"bz_comment_hilite\" " IF marks.$count %]>
+    <div class="bz_comment[% " bz_private" IF comment.isprivate %]
+                [% " bz_comment_hilite" IF marks.$count %]">
       [% IF count == description %]
         <table>
           <tr>
-            <td align="left">
+            <th align="left">
               <b><a name="c0" href="show_bug.cgi?id=[% bug.bug_id %]#c0">
                 Description</a>:</b>&nbsp;&nbsp;
                 [% IF mode == "edit" %]
@@ -98,16 +102,15 @@
                     addReplyLink(0);
                   //--></script>
                 [% END %]
-            </td>
+            </th>
             <td align="left" width="30%">
               <b>Opened:</b> [% bug.creation_ts FILTER time %]
             </td>
           </tr>
         </table>
       [% ELSE %]
-        <br>
-        <span class="bz_comment">
-          ------- <i>Comment
+        <span class="bz_comment_head">
+          <span class="comment_rule">-------</span> <i>Comment
           <a name="c[% count %]" href="show_bug.cgi?id=[% bug.bug_id %]#c[% count %]">
             #[% count %]</a> From 
           <a href="mailto:[% comment.email FILTER html %]">
@@ -118,7 +121,7 @@
           <script type="text/javascript"><!-- 
             addReplyLink([% count %]); //--></script>
           [% END %]
-          -------
+          <span class="comment_rule">-------</span>
         </span>
       [% END %]
         
