--- a/webtools/bugzilla/template/en/default/bug/show.html.tmpl
+++ b/webtools/bugzilla/template/en/default/bug/show.html.tmpl
@@ -31,10 +31,10 @@
   [% filtered_desc = bug.short_desc FILTER html %]
   [% filtered_timestamp = bug.delta_ts FILTER time %]
   [% PROCESS global/header.html.tmpl
-    title = "$terms.Bug $bug.bug_id - $filtered_desc"
-    h1 = "$terms.Bug&nbsp;$bug.bug_id"
-    h2 = filtered_desc
-    h3 = "Last modified: $filtered_timestamp"
+    title = "$terms.Bug $bug.bug_id &ndash; $filtered_desc"
+    header = "$terms.Bug&nbsp;$bug.bug_id"
+    subheader = filtered_desc
+    header_addl_info = "Last modified: $filtered_timestamp"
     bodyclasses = ['bz_bug',
                    "bz_status_$bug.bug_status",
                    "bz_component_$bug.component",
